# causal-uplift-optimizer

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
src/: __init__.py  data_loader.py  model.py  optimizer.py
tests/: test_logic.py
