[project]
name = "causal-uplift-optimizer"
version = "0.1.0"
description = "Causal Uplift Modeling dashboard — identify Persuadable customers with a T-Learner"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "xgboost>=2.0,<3.0",
    "plotly>=5.15",
    "streamlit>=1.30",
    "shap>=0.40",
    "numba>=0.59.0; python_version >= '3.11'",
    "pytest>=7.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:shap",
]
